--- a/.gitignore
+++ b/.gitignore
@@ -32,9 +32,8 @@ out/
 /dist/
 /nbdist/
 /.nb-gradle/
-application*.properties
-application-*.yml
-application*.yml
+application.properties
+application-oauth.yml
 
 
 ### VS Code ###
