--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,14 @@
 spring.application.name=demo
+
+
+# local MySQL
+spring.jpa.hibernate.ddl-auto=update
+
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.datasource.url=jdbc:mysql://localhost:3306/hangulbada
+spring.datasource.username=root
+spring.datasource.password=diver(16)
+
+spring.jpa.show-sql=true
+
+spring.jpa.properties.hibernate.format_sql=true
