--- a/src/main/resources/application-oauth.yml
+++ b/src/main/resources/application-oauth.yml
@@ -1,11 +1,41 @@
 spring:
-    security:
-        oauth2:
-            client:
-                registration:
-                    google:
-                        client-id: 873422458228-lja12vrtsjnnm9qme6b192h58qj53i47.apps.googleusercontent.com
-                        client-secret: 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
-                        scope:
-                            - email
-                            - profile
+  security:
+    oauth2:
+      client:
+        registration:
+
+          kakao:
+            client-id: <your id>
+            client-secret: <your secret>
+            redirect-uri: <your url>/login/oauth2/code/kakao
+            authorization-grant-type: authorization_code
+            client-authentication-method: POST
+            client-name: Kakao
+            scope:
+              - profile
+              - account_email
+          naver:
+            client-id: <your id>
+            client-secret: <your secret>
+            redirect-uri: <your url>/login/oauth2/code/naver
+            authorization-grant-type: authorization_code
+            scope:
+              - name
+              - email
+          google:
+            client-id: 873422458228-lja12vrtsjnnm9qme6b192h58qj53i47.apps.googleusercontent.com
+            client-secret: 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
+            scope:
+              - email
+              - profile
+        provider:
+          kakao:
+            authorization-uri: https://kauth.kakao.com/oauth/authorize
+            token-uri: https://kauth.kakao.com/oauth/token
+            user-info-uri: https://kapi.kakao.com/v2/user/me
+            user-name-attribute: id
+          naver:
+            authorization-uri: https://nid.naver.com/oauth2.0/authorize
+            token-uri: https://nid.naver.com/oauth2.0/token
+            user-info-uri: https://openapi.naver.com/v1/nid/me
+            user-name-attribute: response
