--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,11 @@ out/
 /dist/
 /nbdist/
 /.nb-gradle/
+application.yml
+application-oauth.yml
+
 
 ### VS Code ###
 .vscode/
+
+application.properties
