--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ on:
   pull_request:
     branches: [main]
 env:
-  S3_BUCKET_NAME: bada-be-deplou
+  S3_BUCKET_NAME: bada-be-deploy
 
 jobs:
   build:
