--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,10 +51,10 @@ jobs:
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      run:
-        aws deploy create-deployment \
-        --application-name bada-be \
-        --deployment-group-name bada-be \
-        --file-exists-behavior OVERWRITE \
-        --s3-location bucket=bada-be-deploy,bundleType=zip,key=bada-be.zip \ 
+      run: |
+        aws deploy create-deployment
+        --application-name bada-be
+        --deployment-group-name bada-be-group
+        --file-exists-behavior OVERWRITE
+        --s3-location bucket=bada-be-deploy,bundleType=zip,key=bada-be.zip
         --region ap-northeast-2
