feat: script cp

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,10 +29,16 @@ jobs:
 
     - name: Make Directory
       run: mkdir -p deploy
-      
+
     - name: Copy Jar
       run: cp ./build/libs/*.jar ./deploy
-      
+
+    - name: Copy appspec.yml
+      run: cp appspec.yml
+
+    - name: Copy script
+      run: cp ./scripts/*.sh/ ./deploy
+
     - name: Make zip file
       run: zip -r ./bada-be.zip ./deploy
       shell: bash
