--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,11 +33,13 @@ jobs:
     - name: Copy Jar
       run: cp ./build/libs/*.jar ./deploy
 
+    # appspec.yml 파일 복사
     - name: Copy appspec.yml
-      run: cp appspec.yml
+      run: cp appspec.yml ./deploy
 
+    # script files 복사
     - name: Copy script
-      run: cp ./scripts/*.sh/ ./deploy
+      run: cp ./scripts/*.sh ./deploy
 
     - name: Make zip file
       run: zip -r ./bada-be.zip ./deploy
