--- a/build.gradle
+++ b/build.gradle
@@ -34,8 +34,9 @@ dependencies {
 
     // Swagger
     implementation 'io.springfox:springfox-boot-starter:3.0.0'
-    implementation 'io.springfox:springfox-swagger-ui:3.0.0'
-    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.3'
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2'
+    implementation "org.springdoc:springdoc-openapi-ui:1.6.11"
+    implementation "io.swagger.core.v3:swagger-annotations-jakarta:2.2.7"
 
     implementation 'org.springframework.boot:spring-boot-starter-web'
     compileOnly 'org.projectlombok:lombok'
