--- a/build.gradle
+++ b/build.gradle
@@ -59,6 +59,9 @@ dependencies {
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+    implementation 'com.amazonaws:aws-java-sdk-s3:1.12.322'
+
 }
 
 tasks.named('test') {
