--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,15 +3,21 @@ name: hangeul-bada api server CI/CD
 on:
   push:
     branches: [main]
+    paths:
+      - '**.java'
+      - '**/build.gradle*'
+      - '**/settings.gradle*'
+      - '**/application*.yml'
+      - '**.sql'
   pull_request:
-    branches: [main]
+    branches: [main, develop]
+
 env:
   S3_BUCKET_NAME: bada-be-deploy2
 
 jobs:
-  build:
+  test:
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v2
     
@@ -21,9 +27,32 @@ jobs:
         java-version: '21'
         distribution: 'temurin'
         
+    - name: Set YML
+      run: |
+        mkdir -p src/main/resources
+        echo "${{ secrets.APPLICATION_YML }}" | base64 --decode > src/main/resources/application.yml
+        echo "${{ secrets.APPLICATION_OAUTH_YML }}" | base64 --decode > src/main/resources/application-oauth.yml
+        find src
+        
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
     
+    - name: Test with Gradle
+      run: ./gradlew test
+
+  deploy:
+    needs: test
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    
+    - name: Set up JDK 21
+      uses: actions/setup-java@v2
+      with:
+        java-version: '21'
+        distribution: 'temurin'
+        
     - name: Build with Gradle
       run: ./gradlew clean build
 
@@ -33,11 +62,9 @@ jobs:
     - name: Copy Jar
       run: cp ./build/libs/*.jar ./deploy
 
-    # appspec.yml 파일 복사
     - name: Copy appspec.yml
       run: cp appspec.yml ./deploy
 
-    # script files 복사
     - name: Copy script
       run: cp ./scripts/*.sh ./deploy
 
@@ -56,9 +83,6 @@ jobs:
       run: aws s3 cp --region ap-northeast-2 ./bada-be.zip s3://$S3_BUCKET_NAME/
 
     - name: Deploy
-      env:
-        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       run:
         aws deploy create-deployment
         --application-name bada-be
