--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,7 +33,7 @@ jobs:
         echo "${{ secrets.APPLICATION_YML }}" | base64 --decode > src/main/resources/application.yml
         echo "${{ secrets.APPLICATION_OAUTH_YML }}" | base64 --decode > src/main/resources/application-oauth.yml
         find src
-        
+
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
     
@@ -52,7 +52,10 @@ jobs:
       with:
         java-version: '21'
         distribution: 'temurin'
-        
+
+    - name: Grant execute permission for gradlew
+      run: chmod +x gradlew
+
     - name: Build with Gradle
       run: ./gradlew clean build
 
