--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,6 +53,13 @@ jobs:
         java-version: '21'
         distribution: 'temurin'
 
+    - name: Set YML
+      run: |
+        mkdir -p src/main/resources
+        echo "${{ secrets.APPLICATION_YML }}" | base64 --decode > src/main/resources/application.yml
+        echo "${{ secrets.APPLICATION_OAUTH_YML }}" | base64 --decode > src/main/resources/application-oauth.yml
+        find src
+
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
 
