--- a/.github/workflows/docker-gradle.yml
+++ b/.github/workflows/docker-gradle.yml
@@ -1,11 +1,4 @@
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-# This workflow will build a Java project with Gradle and cache/restore any dependencies to improve the workflow execution time
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-java-with-gradle
-
-name: Java CI with Gradle
+name: Docker CI/CD
 
 on:
   push:
@@ -21,30 +14,37 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
-    # 1. Java 17 세팅
+    
+    # 1. Java 21 세팅
     - name: Set up JDK 21
       uses: actions/setup-java@v3
       with:
         java-version: '21'
         distribution: 'temurin'
 
-    # 2. Spring Boot 애플리케이션 빌드
-    - name: Build with Gradle
-      uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
+    # 2. Gradle 캐시 설정 (옵션)
+    - name: Cache Gradle packages
+      uses: actions/cache@v3
       with:
-        arguments: build
+        path: ~/.gradle/caches
+        key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
+        restore-keys: ${{ runner.os }}-gradle-
 
-    # 3. Docker 이미지 빌드
-    - name: docker image build
+    # 3. Spring Boot 애플리케이션 빌드
+    - name: Build with Gradle
+      run: ./gradlew build
+
+    # 4. Docker 이미지 빌드
+    - name: Build Docker image
       run: docker build -t ${{ secrets.DOCKER_USER }}/github-actions-demo .
 
-    # 4. DockerHub 로그인
-    - name: docker login
+    # 5. DockerHub 로그인
+    - name: Log in to DockerHub
       uses: docker/login-action@v2
       with:
         username: ${{ secrets.DOCKER_USER }}
         password: ${{ secrets.DOCKER_PWD }}
 
-    # 5. Docker Hub 이미지 푸시
-    - name: docker Hub push
+    # 6. Docker Hub 이미지 푸시
+    - name: Push Docker image to DockerHub
       run: docker push ${{ secrets.DOCKER_USER }}/github-actions-demo
