--- a/.github/workflows/docker-gradle.yml
+++ b/.github/workflows/docker-gradle.yml
@@ -22,6 +22,10 @@ jobs:
         java-version: '21'
         distribution: 'temurin'
 
+       # 2. gradlew에 실행 권한 부여
+    - name: Grant execute permission for gradlew
+      run: chmod +x ./gradlew
+
     # 2. Gradle 캐시 설정 (옵션)
     - name: Cache Gradle packages
       uses: actions/cache@v3
