--- a/.github/workflows/run-docker-gradle.yml
+++ b/.github/workflows/run-docker-gradle.yml
@@ -27,11 +27,10 @@ jobs:
       with:
         java-version: '21'
         distribution: 'temurin'
-    - name: Grant execute permission for gradlew
-      run: chmod +x ./gradlew
-
     - name: Build with Gradle
-      run: ./gradlew build
+      uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
+      with:
+        arguments: build
 
     - name: Execute Jar File # 추가
       run: sudo kill -9 `sudo lsof -t -i:5943` & sudo java -jar /home/ubuntu/actions-runner/_work/linode-github-action-test/linode-github-action-test/build/libs/linode-github-action-test-0.0.1-SNAPSHOT.jar &
