--- a/.github/workflows/run-docker-gradle.yml
+++ b/.github/workflows/run-docker-gradle.yml
@@ -14,25 +14,22 @@ on:
     branches: [ "deploy-v2" ]
 permissions:
   contents: read
-
 jobs:
   build:
 
     runs-on: self-hosted # <- 우분투 서버에서 실행하도록 하는 명령어
 
     steps:
-    - uses: actions/checkout@v3
-    - name: Set up JDK 21
-      uses: actions/setup-java@v3
-      with:
-        java-version: '21'
-        distribution: 'temurin'
-    - name: Grand execute permission for gradlew # permission 에러가 발생할 경우
-      run: chmod +x /root/actions-runner/_work/test/test/server/farm/gradlew
+      - uses: actions/checkout@v3
+      - name: Set up JDK 11
+        uses: actions/setup-java@v3
+        with:
+          java-version: '11'
+          distribution: 'temurin'
+      - name: Build with Gradle
+        uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
+        with:
+          arguments: build
 
-    - name: build # 경로를 직접 설정하여 빌드 명령을 내려준다.
-      run: /root/actions-runner/_work/test/test/server/farm/gradlew build
-      working-directory: ./server/farm
-
-    - name: Execute Jar File # 추가
-      run: sudo kill -9 `sudo lsof -t -i:5943` & sudo java -jar /home/ubuntu/actions-runner/_work/linode-github-action-test/linode-github-action-test/build/libs/linode-github-action-test-0.0.1-SNAPSHOT.jar &
+      - name: Execute Jar File # 추가
+        run: sudo kill -9 `sudo lsof -t -i:5943` & sudo java -jar /home/ubuntu/actions-runner/_work/linode-github-action-test/linode-github-action-test/build/libs/linode-github-action-test-0.0.1-SNAPSHOT.jar &
