--- a/.github/workflows/run-docker-gradle.yml
+++ b/.github/workflows/run-docker-gradle.yml
@@ -1,10 +1,3 @@
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-# This workflow will build a Java project with Gradle and cache/restore any dependencies to improve the workflow execution time
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-java-with-gradle
-
 name: Run Docker Gradle
 
 on:
@@ -14,13 +7,14 @@ on:
     branches: [ "deploy-v2" ]
 permissions:
   contents: read
+
 jobs:
   build:
-
-    runs-on: self-hosted # <- 우분투 서버에서 실행하도록 하는 명령어
+    runs-on: self-hosted
 
     steps:
       - uses: actions/checkout@v3
+
       - name: Set up JDK 21
         uses: actions/setup-java@v3
         with:
@@ -30,10 +24,34 @@ jobs:
       - name: Run chmod to make gradlew executable
         run: chmod +x ./gradlew
 
-      - name: Build with Gradle
-        uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
+      - name: Cache Gradle packages
+        uses: actions/cache@v3
         with:
-          arguments: build
+          path: ~/.gradle/caches/
+          key: ${{ runner.os }}-gradle-caches-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties', '**/settings.gradle*', '**/build.gradle*') }}
+          restore-keys: ${{ runner.os }}-gradle-caches-
 
-      - name: Execute Jar File # 추가
-        run: sudo kill -9 `sudo lsof -t -i:5943` & sudo java -jar /home/ubuntu/actions-runner/_work/linode-github-action-test/linode-github-action-test/build/libs/linode-github-action-test-0.0.1-SNAPSHOT.jar &
+      - name: Cache Gradle Wrapper
+        uses: actions/cache@v3
+        with:
+          path: ~/.gradle/wrapper/
+          key: ${{ runner.os }}-gradle-wrapper-${{ hashFiles('**/gradle/wrapper/gradle-wrapper.properties') }}
+          restore-keys: ${{ runner.os }}-gradle-wrapper-
+
+      - name: Set Gradle properties
+        run: |
+          echo "org.gradle.jvmargs=-Xmx1024m -XX:MaxPermSize=256m" >> gradle.properties
+          echo "org.gradle.daemon=false" >> gradle.properties
+
+      - name: Build with Gradle
+        run: ./gradlew build
+
+      - name: Stop existing application
+        run: |
+          if sudo lsof -t -i:5943; then
+            sudo kill -9 $(sudo lsof -t -i:5943)
+          fi
+
+      - name: Execute Jar File
+        run: |
+          nohup java -jar /home/ubuntu/actions-runner/_work/linode-github-action-test/linode-github-action-test/build/libs/linode-github-action-test-0.0.1-SNAPSHOT.jar &
