--- a/.github/workflows/docker-gradle.yml
+++ b/.github/workflows/docker-gradle.yml
@@ -66,9 +66,13 @@ jobs:
       - name: docker stop container
         run: sudo docker stop $(sudo docker ps -q) 2>/dev/null || true
 
+      - name: Create .env file
+        run: echo "${{ secrets.BADA_ENV }}" > .env
+
+
       # 3. 최신 이미지를 컨테이너화하여 실행시킵니다
       - name: docker run new container
-        run: sudo docker run --name github-actions-demo --rm -d -p 5943:5943 ${{ secrets.DOCKER_USER }}/github-actions-demo --env-file ${{secrets.BADA_ENV}}
+        run: sudo docker run --name github-actions-demo --rm -d -p 5943:5943 ${{ secrets.DOCKER_USER }}/github-actions-demo --env-file .env
 
       # 4. 미사용 이미지를 정리합니다
       - name: delete old docker image
