--- a/application.yml
+++ b/application.yml
@@ -5,6 +5,12 @@ custom:
   jwt:
     secretKey: ${JWT_SECRET_KEY}
 
+springdoc:
+  api-docs:
+    path: /api-docs
+  swagger-ui:
+    path: /api/swagger-ui
+
 spring:
   application:
     name: hangeulbada
