feat: change des

--- a/.github/workflows/docker-gradle.yml
+++ b/.github/workflows/docker-gradle.yml
@@ -2,9 +2,9 @@ name: Docker CI/CD
 
 on:
   push:
-    branches: [ "deploy-v2" ]
+    branches: [ "main" ]
   pull_request:
-    branches: [ "deploy-v2" ]
+    branches: [ "main" ]
 permissions:
   contents: read
 
