--- a/.github/workflows/docker-gradle.yml
+++ b/.github/workflows/docker-gradle.yml
@@ -46,7 +46,7 @@ jobs:
       run: docker push ${{ secrets.DOCKER_USER }}/github-actions-demo
 
   run-docker-image-on-ec2:
-    # build-docker-image (위)과정이 완료되어야 실행됩니다.
+    # build-docker-image 과정이 완료되어야 실행됩니다.
     needs: build-docker-image
     runs-on: self-hosted
 
