--- a/.github/workflows/docker-gradle.yml
+++ b/.github/workflows/docker-gradle.yml
@@ -39,11 +39,11 @@ jobs:
 
     # 4. Docker 이미지 빌드
     - name: Build Docker image
-      run: docker build -t ${{ secrets.DOCKER_USER }}/github-actions-demo .
+      run: docker build -t ${{ secrets.DOCKER_USER }}/bada-spring .
 
     # 6. Docker Hub 이미지 푸시
     - name: Push Docker image to DockerHub
-      run: docker push ${{ secrets.DOCKER_USER }}/github-actions-demo
+      run: docker push ${{ secrets.DOCKER_USER }}/bada-spring
 
   run-docker-image-on-ec2:
     # build-docker-image 과정이 완료되어야 실행됩니다.
@@ -53,20 +53,19 @@ jobs:
     steps:
       # 1. 최신 이미지를 풀받습니다
       - name: docker pull
-        run: sudo docker pull ${{ secrets.DOCKER_USER }}/github-actions-demo
+        run: sudo docker pull ${{ secrets.DOCKER_USER }}/bada-spring
 
       # 2. 기존의 컨테이너를 중지시킵니다
       - name: docker stop container
-        run: sudo docker stop $(sudo docker ps -q) 2>/dev/null || true
+        run: sudo docker stop bada-spring-server
 
       - name: Create .env file
         run: echo "${{ secrets.BADA_ENV }}" > .env
 
-
       # 3. 최신 이미지를 컨테이너화하여 실행시킵니다
       - name: docker run new container
-        run: sudo docker run --name github-actions-demo --rm -d -p 5943:5943 --env-file .env ${{ secrets.DOCKER_USER }}/github-actions-demo
+        run: sudo docker run --name bada-spring-server --rm -d -p 5943:5943 --env-file .env ${{ secrets.DOCKER_USER }}/bada-spring
 
-      # 4. 미사용 이미지를 정리합니다
-      - name: delete old docker image
-        run: sudo docker system prune -f
+      # # 4. 미사용 이미지를 정리합니다
+      # - name: delete old docker image
+      #   run: sudo docker system prune -f
