feat: AI 문제 생성 기능

--- a/application.yml
+++ b/application.yml
@@ -51,3 +51,7 @@ cloud:
       access:
         key: ${AWS_ACCESS_KEY}
         secret: ${AWS_SECRET_ACCESS_KEY}
+
+python:
+  api:
+    url: ${AI_PY_URL}
