--- a/.github/workflows/docker-gradle.yml
+++ b/.github/workflows/docker-gradle.yml
@@ -48,6 +48,7 @@ jobs:
   run-docker-image-on-ec2:
     # build-docker-image 과정이 완료되어야 실행됩니다.
     needs: build-docker-image
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     runs-on: self-hosted
 
     steps:
